--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,16 @@
   margin: 20px auto;
   width: 75%;
 }
+
+thead{
+    background-color: rgba(3, 37, 65, 1);
+    color: white;
+    opacity: 0.8;
+    vertical-align: middle !important;
+    height: 70px;
+}
+
+
 td {
   text-align: center;
   vertical-align: middle;
@@ -49,8 +59,7 @@ td {
   opacity: 0.8;
   color: white;
 }
-.navigate-back {
-}
+
 .content-container {
   width: 100%;
 }
@@ -67,14 +76,19 @@ td {
   margin-left: 20px;
   height: 350px;
 }
+.card-body{
+  padding: 1px
+}
 
 .card-title {
   font-size: 1rem;
   font-weight: 500;
-  height: 50px;
+  height: 70px;
+  background-color: beige;
 }
 .card-text {
   height: 180px;
+  overflow: auto;
 }
 .btn-edit {
   margin-right: 20px;
@@ -92,8 +106,11 @@ td {
 .edit-form {
   border: 1px solid lightgray;
   border-radius: 10px;
-  padding: 40px;
+  padding: 30px 40px;
   width: 30%;
+}
+.text-area-form{
+  height:120px !important;
 }
 .navigate-back {
   text-align: right;
